--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,3 +1,36 @@
 .section {
   padding: 40px 0;
 }
+
+.showcaseFitlerContainer {
+  display: flex;
+  flex-flow: wrap;
+  margin: auto;
+  gap: 0.5em;
+  font-size: x-large;
+  justify-content: center;
+  align-items: center;
+}
+
+.showcaseFitlerContainer .showcaseConsoleTag {
+  background-color: transparent !important;
+}
+
+.showcaseFilterHeaderContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+
+.showcaseFilterHeader {
+  margin: 0;
+  margin-right: 0.5em;
+  padding: 0;
+  display: inline-block;
+}
+
+.showcaseFilterResults {
+  margin: 0;
+  padding: 0;
+  font-size: large;
+}
