--- a/src/components/ShowcaseCardIcon/styles.module.css
+++ b/src/components/ShowcaseCardIcon/styles.module.css
@@ -11,11 +11,15 @@
   color: white;
   text-shadow: 0.15rem 0.15rem 0.15rem rgba(0, 0, 0, 0.5);
   font-weight: 500;
-  border: 1px solid;
+  border: 1px solid var(--ifm-color-primary);
+}
+
+.showcaseConsoleTagButton {
+  color: var(--ifm-color-content);
 }
 
 .showcaseConsoleTagButton:hover {
-  color: white;
+  color: var(--ifm-color-content);
 }
 
 @media screen and (min-width: 600px) {
