--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -24,7 +24,6 @@
 
 .showcaseFilterHeader {
   margin: 0;
-  margin-right: 0.5em;
   padding: 0;
   display: inline-block;
 }
@@ -33,4 +32,6 @@
   margin: 0;
   padding: 0;
   font-size: large;
+  display: inline-block;
+  margin-left: 0.5em;
 }
